--- a/src/components/contactCreateComponent/contactCreateComponent.scss
+++ b/src/components/contactCreateComponent/contactCreateComponent.scss
@@ -8,6 +8,8 @@ form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   margin-bottom: 20px;
   box-shadow: 0 2px 8px 0 rgba(0,0,0,0.5);
+  display: block;
+  margin: 0 auto;
 }
 .item{
 
