--- a/src/components/contactCreateComponent/contactCreateComponent.css
+++ b/src/components/contactCreateComponent/contactCreateComponent.css
@@ -1,4 +1,4 @@
-form {
+.plate {
   width: 100%;
   max-width: 350px;
   border-radius: 0;
@@ -6,9 +6,7 @@ form {
   padding: 15px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   margin-bottom: 20px;
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.5);
-  display: block;
-  margin: 0 auto; }
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.5); }
 
 .input__label {
   width: 100%;
@@ -28,5 +26,26 @@ form {
   border-style: none none solid none;
   box-shadow: none;
   outline: none; }
+
+.plate__footer {
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end; }
+
+.button {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  margin: 5px; }
+
+.button__add {
+  background: url("https://image.flaticon.com/icons/png/512/60/60745.png") center no-repeat;
+  background-size: contain; }
+
+.button__clear {
+  background: url("https://image.flaticon.com/icons/png/512/60/60578.png") center no-repeat;
+  background-size: contain; }
 
 /*# sourceMappingURL=contactCreateComponent.css.map */
