--- a/src/components/contactCreateComponent/contactCreateComponent.scss
+++ b/src/components/contactCreateComponent/contactCreateComponent.scss
@@ -1,5 +1,5 @@
 
-form {
+.plate {
   width: 100%;
   max-width: 350px;
   border-radius: 0;
@@ -8,12 +8,9 @@ form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   margin-bottom: 20px;
   box-shadow: 0 2px 8px 0 rgba(0,0,0,0.5);
-  display: block;
-  margin: 0 auto;
-}
-.item{
 
 }
+
 .input__label {
   width: 100%;
   font-size: 16px;
@@ -33,4 +30,27 @@ form {
   border-style: none none solid none;
   box-shadow: none;
   outline: none;
+}
+.plate__footer{
+  //box-shadow: 0 2px 8px 0 rgba(0,0,0,0.5);
+  padding:  10px 0;
+  display: flex;
+  justify-content: flex-end;
+}
+.button{
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  margin: 5px;
+}
+.button__add{
+  background: url('https://image.flaticon.com/icons/png/512/60/60745.png') center no-repeat;
+  background-size: contain;
+}
+
+.button__clear{
+  background: url('https://image.flaticon.com/icons/png/512/60/60578.png') center no-repeat;
+  background-size: contain;
 }
