--- a/src/components/mainComponent/mainComponent.scss
+++ b/src/components/mainComponent/mainComponent.scss
@@ -8,4 +8,11 @@ body{
 .main{
   margin: 0;
   padding:0;
+
+}
+.list{
+  display: flex;
+  flex:1 1 350px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
