--- a/src/components/contactCreateComponent/contactCreateComponent.css
+++ b/src/components/contactCreateComponent/contactCreateComponent.css
@@ -27,6 +27,12 @@
   box-shadow: none;
   outline: none; }
 
+.input__error {
+  border-color: red;
+  border-style: none none solid none;
+  width: 100%;
+  outline: none; }
+
 .plate__footer {
   padding: 10px 0;
   display: flex;
