--- a/src/components/mainComponent/mainComponent.css
+++ b/src/components/mainComponent/mainComponent.css
@@ -10,9 +10,12 @@ body {
   padding: 0; }
 
 .list {
+  max-width: 1135px;
   display: flex;
   flex: 1 1 350px;
+  margin: 0 auto;
   flex-wrap: wrap;
-  justify-content: space-around; }
+  justify-content: space-around;
+  padding: 0 10px; }
 
 /*# sourceMappingURL=mainComponent.css.map */
