--- a/src/components/mainComponent/mainComponent.scss
+++ b/src/components/mainComponent/mainComponent.scss
@@ -9,10 +9,14 @@ body{
   margin: 0;
   padding:0;
 
+
 }
 .list{
+  max-width: 1135px;
   display: flex;
   flex:1 1 350px;
+  margin: 0 auto;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding: 0 10px;
 }
