--- a/src/components/resultComponent/style.scss
+++ b/src/components/resultComponent/style.scss
@@ -1,6 +1,7 @@
 .result{
   width: 100%;
   max-width: 350px;
+  min-width: 350px;
   border-radius: 0;
   border: 1px solid #ccc;
   padding: 15px;
@@ -13,6 +14,7 @@
   p{
     margin: 0;
     padding: 0;
+    color: #222;
   }
 }
 
